# frozen_memory

./: .env.example  Dockerfile  __main__.py  config.py  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 52596ea2daa0_create_notes.py  8f2a30110708_create_users.py  de5bd799111c_create_notes.py
bot/: database.py  main.py
bot/cronjobs/: __init__.py  note_reminder.py
bot/cronjobs/post_compiler/: __init__.py  data_compiler.py  manager.py  post_generator.py
bot/handlers/: __init__.py  auth.py  manual_cron.py  note.py  text_dispatch.py
bot/models/: __init__.py  notes.py  users.py
bot/schemas/: __init__.py  notes.py  report_compiler.py  users.py
bot/services/notes/: __init__.py  service.py  types.py
bot/services/users/: service.py  types.py
bot/services/voice_to_text/: __init__.py  service.py
bot/utils/: is_admin.py
